[package]
name = "delegator"
version = "4.0.1"
authors = ["[your_name] <[your_email]>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = { version = "4.0" }

[lib]
name = "delegator"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
